updated ewmh - better colors - added wallpapers

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -266,26 +266,27 @@ label-active = %name%
 label-active-foreground = ${color.foreground}
 label-active-background = ${color.background}
 label-active-underline= ${color.foreground}
+label-active-overline= ${color.foreground}
 ;#6790eb
-label-active-padding = 1
+label-active-padding = 2%
 
 label-occupied = %name%
 label-occupied-background = ${color.background}
-label-occupied-foreground = ${color.foreground}
-label-occupied-underline= ${color.alert}
-label-occupied-padding = 1
+label-occupied-foreground = ${color.red}
+;label-occupied-overline= ${color.red}
+label-occupied-padding = 2%
 
 ;label-urgent = %name%
 ;label-urgent-foreground = ${color.foreground}
 ;label-urgent-background = ${color.alert}
 ;label-urgent-underline = ${color.alert}
-;label-urgent-padding = 1
+;label-urgent-padding = 2%
 
 label-empty = %name%
 label-empty-foreground = ${color.foreground}
 label-empty-background = ${color.background}
 
-label-empty-padding = 1
+label-empty-padding = 2%
 format-foreground = ${color.foreground}
 format-background = ${color.background}
 
