--- a/polybar/polybartop.config
+++ b/polybar/polybartop.config
@@ -49,6 +49,27 @@ alert = #bd2c40ff
 modulefg = #f7f7f7
 modulefg-alt = #f7f7f7
 
+red = #e53935
+pink = #d81b60
+purple = #8e24aa
+deep-purple = #5e35b1
+indigo = #3949ab
+blue = #1e88e5
+light-blue = #039be5
+cyan = #00acc1
+teal = #00897b
+green = #43a047
+light-green = #7cb342
+lime = #c0ca33
+yellow = #fdd835
+amber = #ffb300
+orange = #fb8c00
+deep-orange = #f4511e
+brown = #6d4c41
+grey = #757575
+blue-gray = #546e7a
+
+
 ; Active Shade
 shade1 = #282629
 shade2 = #37474F
@@ -85,7 +106,7 @@ offset-y = 2
 monitor = ${env:monitor}
 fixed-center = true
 bottom = false
-
+line-size = 3
 background = ${color.background}
 foreground = ${color.foreground}
 
@@ -109,7 +130,7 @@ modules-right = memory4 break filesystem break arch-updates break powermenu
 
 [bar/mainbar0]
 inherit = bar/barbase
-modules-left = rofi2 break workspace0
+modules-left = rofi2 break ewmh
 
 
 [module/workspace0]
