--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -37,14 +37,16 @@
 ;; rofi
 ;; rofi2
 ;; screenshot
+;; simplescreenrecorder
 ;; sysmenu
 ;; telegram
 ;; temperature
+;; vivaldi
 ;; volume
 ;; wall
 ;; wlan
 ;; youtube
-;; 
+;;
 
 ##########################################################################################################################################
 
@@ -173,26 +175,26 @@ interval = 0.08
 ;format = " <ramp-coreload>"
 format = " <ramp-coreload>"
 format-margin = 1
-ramp-coreload-0 = ▁ 
+ramp-coreload-0 = ▁
 ramp-coreload-0-foreground = ${color.foreground}
-ramp-coreload-1 = ▂ 
+ramp-coreload-1 = ▂
 ramp-coreload-1-foreground = ${color.foreground}
-ramp-coreload-2 = ▃ 
+ramp-coreload-2 = ▃
 ramp-coreload-2-foreground = ${color.adapta-lightgreen}
-ramp-coreload-3 = ▄ 
+ramp-coreload-3 = ▄
 ramp-coreload-3-foreground = ${color.adapta-green}
-ramp-coreload-4 = ▅ 
+ramp-coreload-4 = ▅
 ramp-coreload-4-foreground = ${color.adapta-yellow}
-ramp-coreload-5 = ▆ 
+ramp-coreload-5 = ▆
 ramp-coreload-5-foreground = ${color.adapta-yellow}
-ramp-coreload-6 = ▇ 
+ramp-coreload-6 = ▇
 ramp-coreload-6-foreground = ${color.adapta-red}
-ramp-coreload-7 = █ 
+ramp-coreload-7 = █
 ramp-coreload-7-foreground = ${color.adapta-red}
 ramp-coreload-font = 3
 format-background = ${color.background}
 format-foreground = ${color.foreground}
-format-underline = 
+format-underline =
 format-padding = 1
 
 ##########################################################################################################################################
@@ -370,6 +372,7 @@ content-foreground = ${color.foreground}
 content-background =  ${color.background}
 ;content-underline = ${color.adapta-cyan}
 click-left = firefox &
+click-right = killall firefox
 
 ##########################################################################################################################################
 
@@ -448,6 +451,10 @@ format-prefix = "  "
 format-prefix-foreground = ${color.foreground}
 format-underline =${color.foreground}
 
+click-left = xfce4-taskmanager
+click-middle = xfce4-taskmanager
+click-right = alacritty -e bpytop
+
 ##########################################################################################################################################
 
 [module/layout]
@@ -456,8 +463,8 @@ format-prefix = " "
 format-prefix-foreground = ${color.amber}
 exec = leftwm-state -w 0 -s "{{ workspace.layout }}"
 tail = true
-click-left = leftwm-command "NextLayout" 
-click-right = leftwm-command "PreviousLayout" 
+click-left = leftwm-command "NextLayout"
+click-right = leftwm-command "PreviousLayout"
 
 ##########################################################################################################################################
 
@@ -534,7 +541,7 @@ label = " %percentage_used%%"
 
 ; Only applies if <bar-used> is used
 
-bar-used-indicator = 
+bar-used-indicator =
 bar-used-width = 10
 bar-used-fill = ━
 bar-used-empty = ━
@@ -672,7 +679,7 @@ click-left = exec rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.
 click-right = exec rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.config/leftwm/themes/current/polybar/scripts/rofi/launcher2.rasi
 
 
-#rofi -show fb -modi "fb:/home/peter/.config/leftwm/themes/db-comic/polybar/scripts/rofi/change.sh"
+#rofi -show fb -modi "fb:/home/peter/.config/leftwm/themes/current/polybar/scripts/rofi/change.sh"
 
 ;click-right = exec xfce4-appfinder
 
@@ -688,6 +695,19 @@ content = ﬆ
 click-left = flameshot gui &
 ;; click-right = xfce4-screenshooter &
 click-right = gnome-screenshot -i &
+
+##########################################################################################################################################
+
+[module/simplescreenrecorder]
+type = custom/text
+content =""
+content-padding = 1
+;content-margin = 1
+content-foreground = ${color.foreground}
+content-background =  ${color.background}
+;content-underline = ${color.adapta-cyan}
+click-left = simplescreenrecorder &
+click-right = killall simplescreenrecorder
 
 ##########################################################################################################################################
 
@@ -730,6 +750,20 @@ label-warn =    %temperature-c%
 label-warn-foreground = ${color.secondary}
 
 ##########################################################################################################################################
+
+[module/vivaldi]
+type = custom/text
+content = 勇
+content-padding = 1
+;content-margin = 1
+content-foreground = ${color.foreground}
+content-background =  ${color.background}
+;content-underline = ${color.adapta-cyan}
+click-left = vivaldi-stable &
+click-right = killall vivaldi-bin
+
+##########################################################################################################################################
+
 
 [module/volume]
 ;https://github.com/jaagr/polybar/wiki/Module:-volume
